--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="./PlayState.js"></script>
 	<script type="text/javascript" src="./Survivor.js"></script>
 	<script type="text/javascript" src="./PathPoint.js"></script>
+	<script type="text/javascript" src="./Hud.js"></script>
 </head>
 <body style="margin: 0;">
 <script type="text/javascript">
