--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="./BootState.js"></script>
 	<script type="text/javascript" src="./LoadState.js"></script>
 	<script type="text/javascript" src="./PlayState.js"></script>
+	<script type="text/javascript" src="./Entity.js"></script>
 	<script type="text/javascript" src="./Survivor.js"></script>
 	<script type="text/javascript" src="./PathPoint.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
