--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="./Survivor.js"></script>
 	<script type="text/javascript" src="./PathPoint.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
+	<script type="text/javascript" src="./Zombie.js"></script>
 </head>
 <body style="margin: 0;">
 <script type="text/javascript">
