Adding lights (things look a lot prettier with lights/shadows, no?)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="./PathPoint.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Zombie.js"></script>
+	<script type="text/javascript" src="./Lights.js"></script>
 </head>
 <body style="margin: 0;">
 <script type="text/javascript">
