--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<script type="text/javascript" src="./BootState.js"></script>
 	<script type="text/javascript" src="./LoadState.js"></script>
 	<script type="text/javascript" src="./PlayState.js"></script>
+	<script type="text/javascript" src="./MenuState.js"></script>
+	<script type="text/javascript" src="./CreditsState.js"></script>
 	<script type="text/javascript" src="./Entity.js"></script>
 	<script type="text/javascript" src="./Survivor.js"></script>
 	<script type="text/javascript" src="./PathPoint.js"></script>
@@ -23,6 +25,8 @@
 		game.state.add('play', PlayState);
 		game.state.add('load', LoadState);
 		game.state.add('boot', BootState);
+		game.state.add('menu', MenuState);
+		game.state.add('credits', CreditsState);
 
 		// Start the initial state
 		game.state.start('boot');
