You must have a brain to play this game (TM)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="./MenuState.js"></script>
 	<script type="text/javascript" src="./CreditsState.js"></script>
 	<script type="text/javascript" src="./InstructionsState.js"></script>
+	<script type="text/javascript" src="./BrandState.js"></script>
 	<script type="text/javascript" src="./Entity.js"></script>
 	<script type="text/javascript" src="./Survivor.js"></script>
 	<script type="text/javascript" src="./PathPoint.js"></script>
@@ -29,6 +30,7 @@
 		game.state.add('menu', MenuState);
 		game.state.add('credits', CreditsState);
 		game.state.add('instructions', InstructionsState);
+		game.state.add('brand', BrandState);
 
 		// Start the initial state
 		game.state.start('boot');
