--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 	<script type="text/javascript" src="./Lights.js"></script>
 </head>
 <body style="margin: 0;">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-10567379-10', 'auto');
+  ga('send', 'pageview');
+</script>
 <script type="text/javascript">
 	window.onload = function() {
 		var game = new Phaser.Game(800, 600, Phaser.AUTO, 'zombie-avoider');
